# RLSComp

./: .gitignore  README.md  pyproject.toml  run_experiment.py  w_state_example.py
configs/: dicke_2_state_config.yaml  dicke_2_state_config_complement.yaml  dicke_3_state_config.yaml  ghz_state_config.yaml  multiple_3_config.yaml  my_experiment.yaml  w_state_config.yaml
configs/batch_run/: batch_run_100_1.yaml  batch_run_100_10.yaml  batch_run_100_11.yaml  batch_run_100_12.yaml  batch_run_100_13.yaml  batch_run_100_14.yaml  batch_run_100_15.yaml  batch_run_100_16.yaml  batch_run_100_17.yaml  batch_run_100_18.yaml  batch_run_100_19.yaml  batch_run_100_2.yaml  batch_run_100_20.yaml  batch_run_100_21.yaml  batch_run_100_22.yaml  batch_run_100_23.yaml  batch_run_100_24.yaml  batch_run_100_25.yaml  batch_run_100_26.yaml  batch_run_100_27.yaml  batch_run_100_28.yaml  batch_run_100_29.yaml  batch_run_100_3.yaml  batch_run_100_30.yaml  batch_run_100_31.yaml  batch_run_100_32.yaml  batch_run_100_33.yaml  batch_run_100_34.yaml  batch_run_100_35.yaml  batch_run_100_36.yaml  batch_run_100_37.yaml  batch_run_100_38.yaml  batch_run_100_39.yaml  batch_run_100_4.yaml  batch_run_100_40.yaml  batch_run_100_41.yaml  batch_run_100_42.yaml  batch_run_100_43.yaml  (+1016 more)
misc/: plot_style.mplstyle  requirements.txt
outputs/: w_state_benchmark.pkl
src/: bartschi2019_dicke.py  benchmarking_utils.py  circuit_utils.py  gleinig_sparse.py  interface.py  mps_utils.py  padding_functions.py  qualtran_sparse.py  regex_utils.py
tests/: test_core.py  test_full.py  test_main.py  utils_for_testing.py
(+28 files in other folders)
