[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RLSComp"
version = "0.1.0"
description = "Compiler for constructing quantum circuits for Regular Language State preparation"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "numpy>=1.23",
  "pyformlang>=1.0",
  "tensornetwork>=0.4",
  "qiskit>=2.0.0"
]